--- a/src/styles/abstracts/_theme.scss
+++ b/src/styles/abstracts/_theme.scss
@@ -1,17 +1,17 @@
 :root {
-  --color-primary: #7c5cff;
-  --color-primary-accent: #4727cd;
-  --color-secondary: #069fff;
-  --color-secondary-accent: #0655ff;
+  --color-primary: #6b4ce6;
+  --color-primary-accent: #5236c4;
+  --color-secondary: #07c;
+  --color-secondary-accent: #0066b3;
   --color-tertiary: #444189;
   --color-tertiary-accent: #24225c;
-  --color-info: #007a37;
-  --color-info-accent: #10e272;
+  --color-info: #006bb7;
+  --color-info-accent: #005494;
   --color-error: #cf2333;
   --color-error-accent: #b71c2a;
   --color-error-bg: #fff1f2;
-  --color-warning: #f36f20;
-  --color-warning-accent: #ffa717;
+  --color-warning: #b84d00;
+  --color-warning-accent: #8f3d00;
   --color-gray-900: #000;
   --color-gray-700: #333;
   --color-gray-600: #767676;
